# flutter_stc_tutk

./: .packages  README.md  pubspec.yaml
.dart_tool/: package_config.json
android/: .project  CMakeLists.txt  build.gradle  local.properties  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: IOTCAPIs.h  TUTKConstants.h  TutkLoctlCommand.h  com_tutk_client_FFMPEG_Decoder.cpp  com_tutk_client_FFMPEG_Decoder.h  native-lib.cpp  utils.h
android/src/main/cpp/libavutil/: ffversion.h
android/src/main/java/com/stc/flutter/tutk/flutter_stc_tutk/: CommApis.java  FlutterStcTutkFactory.java  FlutterStcTutkPlugin.java  FlutterSurfaceView.java
android/src/main/java/com/tutk/IOTC/: AVAPIs.java  IOTCAPIs.java  TutkLoctlCommand.java
android/src/main/java/com/tutk/client/FFMPEG/: Decoder.java
android/src/main/res/values/: colors.xml  strings.xml
example/: .flutter-plugins  .flutter-plugins-dependencies  .packages  README.md  pubspec.yaml
example/MyApplication/: build(1).gradle
example/MyApplication/app/: build(2).gradle
example/MyApplication/gradle/wrapper/: gradle-wrapper.properties
example/android/: local.properties
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/stc/flutter/tutk/app/: MainActivity.java
example/android/app/src/main/java/com/stc/flutter/tutk/flutter_stc_tutk_example/: MainActivity.java
example/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/.symlinks/: flutter
example/ios/.symlinks/plugins/: flutter_stc_tutk
example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
example/ios/Flutter/App.framework/: App
example/ios/Flutter/App.framework/flutter_assets/: LICENSE
example/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcworkspace/xcuserdata/ygod.xcuserdatad/: UserInterfaceState.xcuserstate
example/ios/Runner/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_stc_tutk.podspec
ios/Classes/: Client.h  Client.m  FlutterStcTutkPlugin.h  FlutterStcTutkPlugin.m  NaluFrame.h  NaluFrame.m  SocketClient.h  SocketClient.m  TUTKConstants.h  TutkClient.h  TutkClient.m  TutkClientManager.h  TutkClientManager.m  TutkCommandManager.h  TutkCommandManager.m  TutkLoctlCommand.h  TutkTunnelClient.h  TutkTunnelClient.m  VideoDecompressor.h  VideoDecompressor.m  VideoPlayerView.h  VideoPlayerView.m  VideoPlayerViewFactory.h  VideoPlayerViewFactory.m  VideoView.h  VideoView.m  ViewController.m
ios/Classes/include/: AVAPIs.h  AVAPIs2.h  IOTCAPIs.h  IOTCWakeUp.h  P2PTunnelAPIs.h  RDTAPIs.h  platform_Config.h
lib/: flutter_stc_tutk.dart
test/: flutter_stc_tutk_test.dart
